...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoginExampleFirebase" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RrH-dN-4pG">
                                <rect key="frame" x="20" y="406" width="353" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="HHI-uE-M1a"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ibu-BT-fsf">
                                <rect key="frame" x="20" y="336" width="353" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="KC1-Ru-WDU"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aqM-Kv-VBS">
                                <rect key="frame" x="20" y="476" width="353" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="RVB-4L-G3d"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                <connections>
                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qmJ-kM-ZaV"/>
                                </connections>
                            </button>
                            <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lN6-e3-bf2">
                                <rect key="frame" x="5" y="773" width="383" height="25"/>
...
